COMMENT CHANGES -WORK --CONTROL-COMMIT

--- a/PythonProjects/MultipleSclerosis-Predictor/multiplesclerosis.ipynb
+++ b/PythonProjects/MultipleSclerosis-Predictor/multiplesclerosis.ipynb
@@ -388,7 +388,7 @@
     }
    ],
    "source": [
-    "# Primero separamos los datos en X e y\n",
+    "# Split data in 'data' and 'labels'\n",
     "X = dataset.drop('group', axis=1)\n",
     "y = dataset['group']\n",
     "X.shape, y.shape"
@@ -411,8 +411,7 @@
     }
    ],
    "source": [
-    "# Ahora separamos en conjunto de entrenamiento y testeo, como tenemos \n",
-    "# pocas muestras voy a separalo en 0.85 - 0.15\n",
+    "# Split the dataset in training and testing groups (0,85 training size)\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, train_size=0.85, shuffle=True)\n",
     "X_train.shape, X_test.shape, y_train.shape, y_test.shape"
    ]
