tabnet method auc=.92 -WORK --CONTROL-COMMIT

--- a/PythonProjects/TranformersComparison/transformerComparison.ipynb
+++ b/PythonProjects/TranformersComparison/transformerComparison.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,14 +41,13 @@
     "import torch.nn as nn\n",
     "# Models\n",
     "from tab_transformer_pytorch import TabTransformer\n",
-    "from saint_pytorch import SAINT\n",
     "# Metrics\n",
-    "from sklearn.metrics import accuracy_score"
+    "from sklearn.metrics import accuracy_score, roc_auc_score, roc_curve"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,12 +264,135 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### SAINt"
+    "### SAINT"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "Importamos SAINT desde nuestra fuente de librerías, si no está descargar la librería desde :\n",
+    "*git clone https://github.com/somepago/saint*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "No podemos probar el SAINT ya que es una librería generada para la ejecución de entrenamientos y testeos de modelos tipo SAINT por comando usando aceleración por GPU y no dispongo de los núcleos CUDA suficientes para que sea verdaderamente efectivo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### TabNet"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pytorch_tabnet.tab_model import TabNetClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/alejandro/Documents/Repositorios/alejandromadrid/.python-venv/lib/python3.9/site-packages/pytorch_tabnet/abstract_model.py:82: UserWarning: Device used : cpu\n",
+      "  warnings.warn(f\"Device used : {self.device}\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "modelTabNet = TabNetClassifier(\n",
+    "    n_d= 32, n_a=32, n_steps=5, gamma=1.5, n_independent=2, n_shared=2,\n",
+    "    cat_idxs=[i for i in range(len(categorical_cols))],\n",
+    "    cat_dims=[dataset[col].nunique() for col in categorical_cols],\n",
+    "    cat_emb_dim=1,\n",
+    "    optimizer_fn=torch.optim.Adam,\n",
+    "    optimizer_params=dict(lr=2e-2),\n",
+    "    scheduler_params={\"step_size\":10, \"gamma\":0.9},\n",
+    "    scheduler_fn=torch.optim.lr_scheduler.StepLR,\n",
+    "    mask_type='sparsemax'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/alejandro/Documents/Repositorios/alejandromadrid/.python-venv/lib/python3.9/site-packages/pytorch_tabnet/abstract_model.py:687: UserWarning: No early stopping will be performed, last training weights will be used.\n",
+      "  warnings.warn(wrn_msg)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch 0  | loss: 0.70732 | test_auc: 0.63611 |  0:00:04s\n",
+      "epoch 1  | loss: 0.59771 | test_auc: 0.71279 |  0:00:08s\n",
+      "epoch 2  | loss: 0.55356 | test_auc: 0.79524 |  0:00:12s\n",
+      "epoch 3  | loss: 0.53332 | test_auc: 0.82095 |  0:00:16s\n",
+      "epoch 4  | loss: 0.48863 | test_auc: 0.86548 |  0:00:20s\n",
+      "epoch 5  | loss: 0.45256 | test_auc: 0.88555 |  0:00:24s\n",
+      "epoch 6  | loss: 0.42428 | test_auc: 0.90558 |  0:00:27s\n",
+      "epoch 7  | loss: 0.40643 | test_auc: 0.8989  |  0:00:33s\n",
+      "epoch 8  | loss: 0.39537 | test_auc: 0.91399 |  0:00:37s\n",
+      "epoch 9  | loss: 0.3986  | test_auc: 0.91976 |  0:00:43s\n",
+      "Test Accuracy: 83.11%\n",
+      "Test AUC: 0.92\n"
+     ]
+    }
+   ],
+   "source": [
+    "start_time = time.time()\n",
+    "modelTabNet.fit(\n",
+    "    X_train=np.hstack([X_train_cat, X_train_cont]),\n",
+    "    y_train=y_train.values,\n",
+    "    eval_set=[(np.hstack([X_test_cat, X_test_cont]), y_test.values)],\n",
+    "    eval_name=['test'],\n",
+    "    eval_metric=['auc'],\n",
+    "    max_epochs=10,\n",
+    "    patience=0,\n",
+    "    batch_size=1024,\n",
+    "    virtual_batch_size=128\n",
+    ")\n",
+    "training_time_tabnet = time.time() - start_time\n",
+    "\n",
+    "test_probs = modelTabNet.predict_proba(np.hstack([X_test_cat, X_test_cont]))[:, 1]\n",
+    "test_preds = (test_probs > 0.5).astype(int)\n",
+    "accuracy_tabnet = accuracy_score(y_test, test_preds)\n",
+    "print(f'Test Accuracy: {accuracy_tabnet * 100:.2f}%')\n",
+    "\n",
+    "fpr_tabnet, tpr_tabnet, _ = roc_curve(y_test, test_probs)\n",
+    "roc_auc_tabnet = roc_auc_score(y_test, test_probs)\n",
+    "print(f'Test AUC: {roc_auc_tabnet:.2f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
