tabnet method auc=.92 -WORK --CONTROL-COMMIT

--- a/PythonProjects/TranformersComparison/transformerComparison.ipynb
+++ b/PythonProjects/TranformersComparison/transformerComparison.ipynb
@@ -290,11 +290,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
@@ -389,10 +384,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "### Conclusiones\n",
+    "\n",
+    "Como no he podido usar los 4 métodos más usados seguiré la lista para hacer una comparación de mínimo 4 métodos."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
