no funciona LightGMB -WORK -CONTROL-COMMIT

--- a/PythonProjects/TranformersComparison/transformerComparison.ipynb
+++ b/PythonProjects/TranformersComparison/transformerComparison.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,6 +395,137 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### LightGMB"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Es un algoritmo de alto rendimiento basado en el boosting. Este es un algoritmo conocido por la eficiencia en el entrenamiento"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import lightgbm as lgb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Preparamos los datos para el modelo\n",
+    "train_data_gmb =    lgb.Dataset(X_train, label=y_train)\n",
+    "test_data_gmb =     lgb.Dataset(X_test, label=y_test, reference=train_data_gmb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Configuración del modelo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params = {\n",
+    "    'objective':        'binary',\n",
+    "    'metric':           'binnary_logloss',\n",
+    "    'boosting_type':    'gbdt',\n",
+    "    'num_leaves':       31,\n",
+    "    'learning_rate':    0.05,\n",
+    "    'feature_fraction': 0.9\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Entrenamiento del modelo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mEl kernel se bloqueó al ejecutar código en la celda actual o en una celda anterior. \n",
+      "\u001b[1;31mRevise el código de las celdas para identificar una posible causa del error. \n",
+      "\u001b[1;31mHaga clic <a href='https://aka.ms/vscodeJupyterKernelCrash'>aquí</a> para obtener más información. \n",
+      "\u001b[1;31mVea Jupyter <a href='command:jupyter.viewOutput'>log</a> para obtener más detalles."
+     ]
+    }
+   ],
+   "source": [
+    "start_time = time.time()\n",
+    "modellGBM = lgb.train(params, train_data_gmb, num_boost_round=100, valid_sets=[test_data_gmb])\n",
+    "training_time_lgbm = time.time() - start_time"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Predicción y evaluación"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_preds = modellGBM.predict(X_test, num_iteration=modellGBM.best_iteration)\n",
+    "test_preds_binary = (test_preds > 0.5).astype(int)\n",
+    "accuracy_lgbm = accuracy_score(y_test, test_preds_binary)\n",
+    "print(f'Test Accuracy: {accuracy_lgbm * 100:.2f}%')\n",
+    "\n",
+    "fpr_lgbm, tpr_lgbm, _ = roc_curve(y_test, test_preds)\n",
+    "roc_auc_lgbm = roc_auc_score(y_test, test_preds)\n",
+    "print(f'Test AUC: {roc_auc_lgbm:.2f}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### CatBoost"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Es "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
