--- a/PythonProjects/AIDE-Titanic-MachineLearningFromDisaster/aide-titanic.ipynb
+++ b/PythonProjects/AIDE-Titanic-MachineLearningFromDisaster/aide-titanic.ipynb
@@ -16,71 +16,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import openai\n",
-    "import numpy as np\n",
-    "import pandas as pd"
+    "import aide"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "modelos = openai.OpenAI().models.list()"
+    "modelos = openai.OpenAI().models.list().to_dict()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model(id='dall-e-3', created=1698785189, object='model', owned_by='system')\n",
-      "Model(id='gpt-4-1106-preview', created=1698957206, object='model', owned_by='system')\n",
-      "Model(id='whisper-1', created=1677532384, object='model', owned_by='openai-internal')\n",
-      "Model(id='davinci-002', created=1692634301, object='model', owned_by='system')\n",
-      "Model(id='babbage-002', created=1692634615, object='model', owned_by='system')\n",
-      "Model(id='dall-e-2', created=1698798177, object='model', owned_by='system')\n",
-      "Model(id='gpt-3.5-turbo-16k', created=1683758102, object='model', owned_by='openai-internal')\n",
-      "Model(id='tts-1-hd-1106', created=1699053533, object='model', owned_by='system')\n",
-      "Model(id='tts-1-hd', created=1699046015, object='model', owned_by='system')\n",
-      "Model(id='gpt-3.5-turbo-1106', created=1698959748, object='model', owned_by='system')\n",
-      "Model(id='gpt-4o-2024-05-13', created=1715368132, object='model', owned_by='system')\n",
-      "Model(id='gpt-4o', created=1715367049, object='model', owned_by='system')\n",
-      "Model(id='gpt-3.5-turbo-instruct-0914', created=1694122472, object='model', owned_by='system')\n",
-      "Model(id='gpt-3.5-turbo-instruct', created=1692901427, object='model', owned_by='system')\n",
-      "Model(id='text-embedding-3-small', created=1705948997, object='model', owned_by='system')\n",
-      "Model(id='gpt-4-turbo-2024-04-09', created=1712601677, object='model', owned_by='system')\n",
-      "Model(id='tts-1', created=1681940951, object='model', owned_by='openai-internal')\n",
-      "Model(id='gpt-4-turbo', created=1712361441, object='model', owned_by='system')\n",
-      "Model(id='gpt-4-0125-preview', created=1706037612, object='model', owned_by='system')\n",
-      "Model(id='gpt-3.5-turbo-0125', created=1706048358, object='model', owned_by='system')\n",
-      "Model(id='gpt-3.5-turbo', created=1677610602, object='model', owned_by='openai')\n",
-      "Model(id='gpt-3.5-turbo-0301', created=1677649963, object='model', owned_by='openai')\n",
-      "Model(id='gpt-4-turbo-preview', created=1706037777, object='model', owned_by='system')\n",
-      "Model(id='tts-1-1106', created=1699053241, object='model', owned_by='system')\n",
-      "Model(id='text-embedding-3-large', created=1705953180, object='model', owned_by='system')\n",
-      "Model(id='gpt-3.5-turbo-0613', created=1686587434, object='model', owned_by='openai')\n",
-      "Model(id='gpt-4', created=1687882411, object='model', owned_by='openai')\n",
-      "Model(id='text-embedding-ada-002', created=1671217299, object='model', owned_by='openai-internal')\n",
-      "Model(id='gpt-4-1106-vision-preview', created=1711473033, object='model', owned_by='system')\n",
-      "Model(id='gpt-3.5-turbo-16k-0613', created=1685474247, object='model', owned_by='openai')\n",
-      "Model(id='gpt-4-0613', created=1686588896, object='model', owned_by='openai')\n",
-      "Model(id='gpt-4-vision-preview', created=1698894917, object='model', owned_by='system')\n"
+      "dall-e-3\n",
+      "gpt-4-1106-preview\n",
+      "whisper-1\n",
+      "davinci-002\n",
+      "babbage-002\n",
+      "dall-e-2\n",
+      "gpt-3.5-turbo-16k\n",
+      "tts-1-hd-1106\n",
+      "tts-1-hd\n",
+      "gpt-3.5-turbo-1106\n",
+      "gpt-4o-2024-05-13\n",
+      "gpt-4o\n",
+      "gpt-3.5-turbo-instruct-0914\n",
+      "gpt-3.5-turbo-instruct\n",
+      "text-embedding-3-small\n",
+      "gpt-4-turbo-2024-04-09\n",
+      "tts-1\n",
+      "gpt-4-turbo\n",
+      "gpt-4-0125-preview\n",
+      "gpt-3.5-turbo-0125\n",
+      "gpt-3.5-turbo\n",
+      "gpt-3.5-turbo-0301\n",
+      "gpt-4-turbo-preview\n",
+      "tts-1-1106\n",
+      "text-embedding-3-large\n",
+      "gpt-3.5-turbo-0613\n",
+      "gpt-4\n",
+      "text-embedding-ada-002\n",
+      "gpt-4-1106-vision-preview\n",
+      "gpt-3.5-turbo-16k-0613\n",
+      "gpt-4-0613\n",
+      "gpt-4-vision-preview\n"
      ]
     }
    ],
    "source": [
-    "for modelo in modelos:\n",
-    "    print(modelo)"
+    "for modelo in modelos['data']:\n",
+    "    print(modelo['id'])"
    ]
   },
   {
