Testeo con pandasai -WORK --CONTROL-COMMIT

--- a/PythonProjects/AskBot/askbot-pandas-v0.ipynb
+++ b/PythonProjects/AskBot/askbot-pandas-v0.ipynb
@@ -48,9 +48,7 @@
     "import webrtcvad\n",
     "# Speech2Text and Text2Speech\n",
     "import speech_recognition as sr\n",
-    "import pyttsx3\n",
-    "# Keys\n",
-    "keys = dotenv_values(\"../../.env-token\")"
+    "import pyttsx3"
    ]
   },
   {
