--- a/PythonTests/PandasAI-Tests/Tweets-Pandas/tweets-test.ipynb
+++ b/PythonTests/PandasAI-Tests/Tweets-Pandas/tweets-test.ipynb
@@ -2,18 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'PANDASAI_API_KEY'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 8\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m# Keys\u001b[39;00m\n\u001b[1;32m      7\u001b[0m keys \u001b[38;5;241m=\u001b[39m dotenv_values(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m../../.env-token\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m----> 8\u001b[0m os\u001b[38;5;241m.\u001b[39menviron[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPANDASAI_API_KEY\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[43mkeys\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mPANDASAI_API_KEY\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'PANDASAI_API_KEY'"
+     ]
+    }
+   ],
    "source": [
     "# Imports\n",
     "import os \n",
     "from pandasai import SmartDataframe\n",
-    "import pandas as pd\n",
-    "from dotenv import dotenv_values\n",
-    "# Keys\n",
-    "keys = dotenv_values(\"../../.env-token\")\n",
-    "os.environ[\"PANDASAI_API_KEY\"] = keys[\"PANDASAI_API_KEY\"]\n"
+    "import pandas as pd\n"
    ]
   },
   {
