Dir correction pandasai-tutorial -WORK --CONTROL-COMMIT

--- a/PANDASAI-TUTORIAL/pandasai.ipynb
+++ b/PANDASAI-TUTORIAL/pandasai.ipynb
@@ -41,7 +41,7 @@
     "import numpy as np\n",
     "import os\n",
     "from dotenv import dotenv_values\n",
-    "keys = dotenv_values(\"../../.env-token\")\n",
+    "keys = dotenv_values(\"../.env-token\")\n",
     "os.environ[\"PANDASAI_API_KEY\"] = keys[\"PANDASAI_API_KEY\"]\n"
    ]
   },
@@ -65,7 +65,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fichero = pd.read_csv('conversion_predictors_of_clinically_isolated_syndrome_to_multiple_sclerosis.csv')"
+    "fichero = pd.read_csv('Data/conversion_predictors_of_clinically_isolated_syndrome_to_multiple_sclerosis.csv')"
    ]
   },
   {
@@ -347,7 +347,7 @@
    "source": [
     "connector = SqliteConnector(\n",
     "    config={\n",
-    "     \"database\":    \"db.sqlite\",\n",
+    "     \"database\":    \"Data/db.sqlite\",\n",
     "     \"table\":       \"Salaries\",\n",
     "     \"low_memory\":  \"False\"\n",
     "    }\n",
