Dir correction  -WORK --CONTROL-COMMIT

--- a/PANDASAI-ASKBOT/askbot-pandas-v0.ipynb
+++ b/PANDASAI-ASKBOT/askbot-pandas-v0.ipynb
@@ -86,8 +86,8 @@
    "outputs": [],
    "source": [
     "# Environment key\n",
-    "os.environ[\"PANDASAI_API_KEY\"] = keys[\"PANDASAI_API_KEY\"]\n",
-    "llm = OpenAI(api_token=keys[\"OPENAI_API_KEY\"])"
+    "keys = dotenv_values(\"../.env-token\")\n",
+    "os.environ[\"PANDASAI_API_KEY\"] = keys[\"PANDASAI_API_KEY\"]"
    ]
   },
   {
