--- a/TRANSFORMER-WINE_QUALITY/TabTransformer-WineQuality.ipynb
+++ b/TRANSFORMER-WINE_QUALITY/TabTransformer-WineQuality.ipynb
@@ -32,7 +32,7 @@
    "outputs": [],
    "source": [
     "# Load the Dataset\n",
-    "dir_dataset = \"WineQuality/winequality-red.csv\"\n",
+    "dir_dataset = \"Data/winequality-red.csv\"\n",
     "data = pd.read_csv(dir_dataset, sep=';')"
    ]
   },
