--- a/TRANSFORMER-WINE_QUALITY/wineQuality-TabPFN.ipynb
+++ b/TRANSFORMER-WINE_QUALITY/wineQuality-TabPFN.ipynb
@@ -21,7 +21,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = pd.read_csv('WineQuality/winequality-red.csv', sep=';')"
+    "dataset = pd.read_csv('Data/winequality-red.csv', sep=';')"
    ]
   },
   {
