corrección código pandasai-tutorial -WORK --CONTROL-COMMIT

--- a/PANDASAI-TUTORIAL/pandasai.ipynb
+++ b/PANDASAI-TUTORIAL/pandasai.ipynb
@@ -147,7 +147,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Aquí ha hecho por si mismo un Random Forest con una accuracy perfecta pero no nos ha dado el código, vamos a probar con el método explain() a ver si nos da el código"
+    "Aquí ha hecho por si mismo un Random Forest con una accuracy perfecta pero no nos ha dado el código, vamos a sacar el código usando el método 'last_code_executed' que nos devuelve el último código que pandasai ejecuta en su LLM"
    ]
   },
   {
@@ -563,6 +563,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Este error ocurre a veces cuando hacemos llamadas a bd locales desde pandasai"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Esto lo he ejecutado para poder saber el número de tablas que tenemos en nuestra base de datos, recomiendo su uso si estás tratando con una BD de sqlite ajena"
    ]
   },
@@ -872,13 +879,6 @@
     "response = agent.chat(\"What is the total sales for the last fiscal year?\")\n",
     "print(response)\n",
     "# The model will use the information provided in the training to generate a response\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Es el código de la propia página de documentación ya que no tengo ninguna pregunta a mano para poner de ejemplo"
    ]
   },
   {
