pandasai-haert problemas -WORK --CONTROL-COMMIT

--- a/PANDASAI-HEART_FAILURE/pandasai-heart_failure_classification.ipynb
+++ b/PANDASAI-HEART_FAILURE/pandasai-heart_failure_classification.ipynb
@@ -16,22 +16,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import pandasai\n",
-    "from dotenv import dotenv_values\n",
-    "import os\n",
-    "# Environment key\n",
-    "keys = dotenv_values(\"../.env-token\")\n",
-    "os.environ[\"PANDASAI_API_KEY\"] = keys[\"PANDASAI_API_KEY\"]"
+    "import pandasai"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,11 +102,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "llm = OpenAI()\n",
+    "llm = OpenAI(model=\"gpt-3.5-turbo-1106\")\n",
     "smartDataFrame = SmartDataframe(file, description=DESCRIPTION, config={\"llm\":llm})"
    ]
   },
@@ -124,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +141,7 @@
     }
    ],
    "source": [
-    "response = smartDataFrame.chat(\"Make a classifier for this dataset?\")"
+    "response = smartDataFrame.chat(\"Make a classifier for this dataset that predicts if a patient will survive a heart failure? (DEATH_EVENT=1 --> True class)\")"
    ]
   },
   {
